# code-analyze-mcp

./: .commitlintrc.yml  .gitignore  .mcp.json  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  OBSERVABILITY.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  deny.toml  glama.json  release.toml  renovate.json  server.json
.github/: CODEOWNERS  CODEOWNERS.license  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  refactor.md
.github/instructions/: src-languages.instructions.md  src.instructions.md  tests.instructions.md
.github/scripts/: check-package-age.sh
.github/workflows/: build-and-attest.yml  ci.yml  codeql.yml  issue-triage.yml  mcp-scan.yml  pr-review.yml  publish-registry-manual.yml  publish-registry.yml  release-repair.yml  release.yml  reuse.yml  scorecard.yml  update-deps.yml
benches/: analysis.rs
benchmarks/: README.md
benchmarks/v1/: README.md  conditions.json  run-a-control.json  run-b-treatment.json
benchmarks/v2/: README.md  conditions.json  ground-truth.md  prompt-control.md  prompt-treatment.md  results.md
benchmarks/v3/: README.md  analysis.md  conditions.json  ground-truth.md  rubric.md  run-order.json  scores.json
benchmarks/v3/prompts/: prompt-control.md  prompt-treatment.md
benchmarks/v3/results/: blinded-scores.json  run-A1.json  run-A2.json  run-A3.json  run-A4.json  run-A5.json  run-B1.json  run-B2.json  run-B3.json  run-B4.json  run-B5.json
code-analyze-core/: Cargo.toml  README.md
code-analyze-core/benches/: analysis.rs
code-analyze-core/src/: analyze.rs  graph.rs  lang.rs  lib.rs  parser.rs  traversal.rs  types.rs
code-analyze-core/src/languages/: java.rs  rust.rs  typescript.rs
code-analyze-core/tests/: integration_tests.rs  semantic_correctness.rs  test_symbol_focus_summary.rs
code-analyze-mcp/: Cargo.toml
code-analyze-mcp/src/: lib.rs  logging.rs  metrics.rs
code-analyze-mcp/tests/: integration_tests.rs  mcp_smoke.rs
crates/aptu-coder/: Cargo.toml
crates/aptu-coder-core/: Cargo.toml  README.md
crates/aptu-coder-core/benches/: analysis.rs
crates/aptu-coder-core/src/: analyze.rs  cache.rs  completion.rs  config.rs  edit.rs  formatter.rs  formatter_defuse.rs  graph.rs  lang.rs  lib.rs  pagination.rs  parser.rs  schema_helpers.rs  test_detection.rs  traversal.rs  types.rs
crates/aptu-coder-core/tests/: acceptance_tests.rs  idempotency.rs  integration_tests.rs  output_size.rs  semantic_correctness.rs  test_summary_no_pagination.rs  test_symbol_focus_summary.rs
crates/aptu-coder-remote/: Cargo.toml  README.md
crates/aptu-coder-remote/src/: lib.rs  tests.rs  types.rs
crates/aptu-coder/src/: lib.rs  logging.rs  main.rs  metrics.rs  otel.rs
crates/aptu-coder/tests/: annotations.rs  exec_command.rs  integration_tests.rs  logging_layer_tests.rs  mcp_smoke.rs  otel_tests.rs  profiles.rs
crates/code-analyze-core/: Cargo.toml  README.md
crates/code-analyze-core/benches/: analysis.rs
crates/code-analyze-core/src/: analyze.rs  cache.rs  completion.rs  config.rs  formatter.rs  formatter_defuse.rs  graph.rs  lang.rs  lib.rs  pagination.rs  parser.rs  schema_helpers.rs  test_detection.rs  traversal.rs  types.rs
crates/code-analyze-core/src/languages/: cpp.rs  csharp.rs  fortran.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/code-analyze-core/tests/: acceptance_tests.rs  fixtures.rs  idempotency.rs  integration_tests.rs  output_size.rs  semantic_correctness.rs  test_summary_no_pagination.rs  test_symbol_focus_summary.rs
crates/code-analyze-mcp/: Cargo.toml
crates/code-analyze-mcp/src/: lib.rs  logging.rs  main.rs  metrics.rs
crates/code-analyze-mcp/tests/: annotations.rs  integration_tests.rs  logging_layer_tests.rs  mcp_smoke.rs
docs/: ARCHITECTURE.md  ASSURANCE.md  DESIGN-GUIDE.md  MCP-BEST-PRACTICES.md  OBSERVABILITY.md  REPO-STANDARDS.md  ROADMAP.md  anthropic-mcp-agents-orchestration.md  comparison-and-optimization-spec.md  openssf-best-practices.md  repo-standards.md  security-testing.md
docs/benchmarks/: ISOLATION.md  ab-harness.md  gap-analysis-v9b.md
docs/benchmarks/v10/: PROMPT.md  README.md  methodology.md  run-order.txt  run.sh  scores-template.json
docs/benchmarks/v12/: analysis.md  methodology.md  run-order.txt  scores-template.json
docs/benchmarks/v13/: methodology.md  run-order.txt  scores-template.json
docs/benchmarks/v14/: mcp-code-analyze-only.json  methodology.md  run-order.txt  scores-template.json
docs/benchmarks/v3/: analysis.md  run-order.txt
docs/benchmarks/v4/: methodology.md  run-order.txt  scores-template.json
docs/benchmarks/v5/: README.md  analysis.md  methodology.md  output-comparison.md  run-order.txt  scores-template.json  scores.json
docs/benchmarks/v6/: README.md  analysis.md  methodology.md  output-comparison.md  run-order.txt  scores-template.json  scores.json
docs/benchmarks/v7/: README.md  methodology.md  run-order.txt  scores-template.json  scores.json
docs/benchmarks/v8/: README.md  methodology.md  run-order.txt  scores.json  (+1 more)
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: analyze_directory_path.rs  lang_extension.rs  parse_source.rs
scripts/: README.md  aptu-coder-profile-proxy.py  bench-v12-run.sh  bench-v13-run.sh  bench-v14-run.sh  bench-wave10-run.sh  bench-wave9-run.sh  cross-client-compat.py  fill-openssf-badge.ts  package.json  rename-finalize.sh  tsconfig.json
src/: analyze.rs  cache.rs  completion.rs  dataflow.rs  formatter.rs  graph.rs  lang.rs  lib.rs  logging.rs  main.rs  metrics.rs  pagination.rs  parser.rs  schema_helpers.rs  test_detection.rs  traversal.rs  types.rs
src/languages/: fortran.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
tests/: acceptance_tests.rs  cross-client-compat.py  fixtures.rs  http_transport_tests.rs  idempotency.rs  integration_tests.rs  mcp_smoke.rs  output_size.rs  semantic_correctness.rs  test_summary_no_pagination.rs  test_symbol_focus_summary.rs
(+404 files in other folders)
