[package]
name = "code-analyze-mcp"
version = "0.1.10"
edition = "2024"
rust-version = "1.94.1"
readme = "README.md"
documentation = "https://docs.rs/code-analyze-mcp"
authors = ["Hugues Clouatre"]
license = "Apache-2.0"
description = "MCP server for code structure analysis using tree-sitter"
repository = "https://github.com/clouatre-labs/code-analyze-mcp"
homepage = "https://github.com/clouatre-labs/code-analyze-mcp"
keywords = ["mcp", "code-analysis", "tree-sitter", "lsp"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["docs/", "benches/", ".github/", "tests/"]

[dependencies]
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tree-sitter = "0.26.6"
tree-sitter-fortran = "0.5.1"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-typescript = "0.23.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tokio-util = "0.7"
async-trait = "0.1"
rayon = "1"
ignore = "0.4"
lru = "0.16"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "=3.27.0"
criterion = { version = "=0.8.2", features = ["html_reports"] }

[[bench]]
name = "analysis"
harness = false

[lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
panic = "unwind"
strip = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
debug-assertions = true
incremental = false
