[workspace]
members = ["crates/code-analyze-core", "crates/code-analyze-mcp"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.94.1"
authors = ["Hugues Clouatre"]
license = "Apache-2.0"
repository = "https://github.com/clouatre-labs/code-analyze-mcp"
homepage = "https://github.com/clouatre-labs/code-analyze-mcp"

[workspace.dependencies]
tree-sitter = "0.26.6"
rayon = "1"
ignore = "0.4"
lru = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2.0.18"
tracing = "0.1"
tokio-util = "0.7"
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
schemars = { version = "1", features = ["derive"] }
tempfile = "=3.27.0"
criterion = { version = "=0.8.2", features = ["html_reports"] }
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-fortran = "0.5.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
panic = "unwind"
strip = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
debug-assertions = true
incremental = false
