[workspace]
members = ["crates/aptu-coder-core", "crates/aptu-coder", "crates/aptu-coder-remote"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Hugues Clouatre"]
license = "Apache-2.0"
repository = "https://github.com/clouatre-labs/aptu-coder"
homepage = "https://github.com/clouatre-labs/aptu-coder"

[workspace.dependencies]
tree-sitter = "0.26.6"
rayon = "1"
ignore = "0.4"
lru = "0.18"
blake3 = "1"
snap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2.0.18"
tracing = "0.1"
tokio-util = "0.7"
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "process"] }
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
schemars = { version = "1", features = ["derive"] }
tempfile = "=3.27.0"
criterion = { version = "=0.8.2", features = ["html_reports"] }
tree-sitter-rust = "0.24.2"
tree-sitter-go = "0.25.0"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-fortran = "0.6.0"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client"] }
opentelemetry-appender-tracing = { version = "0.31", features = ["log"] }
tracing-opentelemetry = "0.32"
gitlab = "0.1811.0"
octocrab = "0.50.0"
rustls = "0.23"
url = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
panic = "unwind"
strip = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
debug-assertions = true
incremental = false
