[package]
name = "aptu-coder"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "MCP server for multi-language code structure analysis"
readme = "../../README.md"
keywords = ["mcp", "code-analysis", "tree-sitter", "ast", "static-analysis"]
categories = ["development-tools", "parser-implementations"]
publish = true

[[bin]]
name = "aptu-coder"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aptu-coder-core = { path = "../aptu-coder-core", version = "0.12", features = ["schemars", "lang-rust", "lang-go", "lang-java", "lang-python", "lang-typescript", "lang-tsx", "lang-fortran", "lang-javascript", "lang-cpp", "lang-csharp"] }
aptu-coder-remote = { path = "../aptu-coder-remote" }
rmcp = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
nix = { version = "0.31", features = ["resource"] }
which = "8"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
serial_test = "=3.4.0"
